--- a/Lab_8.csproj
+++ b/Lab_8.csproj
@@ -214,6 +214,19 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DTO\PaginatedResult.cs" />
+    <Compile Include="Forms\Admin.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\Admin.Designer.cs">
+      <DependentUpon>Admin.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\Home.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\Home.Designer.cs">
+      <DependentUpon>Home.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\Login.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -226,9 +239,9 @@
     <Compile Include="Forms\UserQuiz.Designer.cs">
       <DependentUpon>UserQuiz.cs</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\20251104120010_InitDatabase.cs" />
-    <Compile Include="Migrations\20251104120010_InitDatabase.Designer.cs">
-      <DependentUpon>20251104120010_InitDatabase.cs</DependentUpon>
+    <Compile Include="Migrations\20251106075846_InitDatabase.cs" />
+    <Compile Include="Migrations\20251106075846_InitDatabase.Designer.cs">
+      <DependentUpon>20251106075846_InitDatabase.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\QuizDBContextModelSnapshot.cs" />
     <Compile Include="Models\Answer.cs" />
@@ -240,8 +253,18 @@
     <Compile Include="Models\User.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\HistoryService.cs" />
+    <Compile Include="Services\QuizService.cs" />
     <Compile Include="Utils\DataSeeder.cs" />
     <Compile Include="Services\UserService.cs" />
+    <Compile Include="Utils\LayoutForm.cs" />
+    <Compile Include="Utils\UIStyle.cs" />
+    <EmbeddedResource Include="Forms\Admin.resx">
+      <DependentUpon>Admin.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\Home.resx">
+      <DependentUpon>Home.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Forms\Login.resx">
       <DependentUpon>Login.cs</DependentUpon>
     </EmbeddedResource>
