--- a/Lab_8.csproj
+++ b/Lab_8.csproj
@@ -254,9 +254,11 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\HistoryService.cs" />
+    <Compile Include="Services\QuestionService.cs" />
     <Compile Include="Services\QuizService.cs" />
     <Compile Include="Utils\DataSeeder.cs" />
     <Compile Include="Services\UserService.cs" />
+    <Compile Include="Utils\Helper.cs" />
     <Compile Include="Utils\LayoutForm.cs" />
     <Compile Include="Utils\UIStyle.cs" />
     <EmbeddedResource Include="Forms\Admin.resx">
